Sun Aug 16 23:52:38 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh: Add a simple test library, to be extended as
	  necessary.
	* src/tests/manconv-1: Use it.

Sun Aug 16 23:37:11 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/manconv-1: Simple test for manconv's handling of
	  Emacs-style coding: tags.
	* src/tests/Makefile.am: New file.
	* src/Makefile.am (SUBDIRS): Add tests.
	* configure.ac (AC_CONFIG_FILES): Add src/tests/Makefile.
	* .bzrignore: Ignore src/tests/tmp-*.

Fri Aug 14 16:09:56 BST 2009  Colin Watson  <cjwatson@debian.org>

	* tools/chconfig: Make executable.

Fri Aug 14 12:20:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* manual/Makefile.am (install-data-hook, uninstall-hook):
	  Install/uninstall the manual into/from $(docdir).

Fri Aug 14 12:18:43 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/Makefile.am (dist_noinst_DATA): Move NEWS to ...
	* Makefile.am (dist_noinst_DATA): ... here.

Fri Aug 14 11:50:27 BST 2009  Colin Watson  <cjwatson@debian.org>

	Move ChangeLog and NEWS to their more conventional location at the
	top level.

	* docs/ChangeLog: Move to ...
	* ChangeLog: ... here.
	* docs/NEWS: Move to ...
	* NEWS: ... here.
	* README, docs/HACKING (Revision control, Release process),
	  src/check_mandirs.c: Update references.

Fri Aug 14 11:43:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use silent rules by default if Automake 1.11 is
	  available.
	* man/Rules.man (replace.sed, .man1.1, .man5.5, .man8.8): Be quieter
	  in silent mode.

	Upgrade to Autoconf 2.64, Automake 1.11, and Gnulib 20090801.

Mon Aug  3 17:13:19 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (less_charset_table): Add CP1251 -> windows, per
	  less(1) (Debian bug #539690).

Wed Jul 22 10:48:10 BST 2009  Colin Watson  <cjwatson@debian.org>

	Make whatis/apropos only display any given manual page, or pointers
	to it, once (Ubuntu bug #27113).
